# efibooteditor

./: .clang-format  .codacy.yml  .gitignore  CMakeLists.txt  CMakePresets.json  INSTALL.md  README.md  efibooteditor.pro  icons.qrc  windows.rc
.github/: dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml
.github/workflows/: asset.yml  build.yml  build_test.yml  clang_format.yml  codacy.yml  codacy_analysis.yml  debug.yml  draft_release.yml  format.yml  qt_update.yml  release.yml  release_assets.yml  release_changeset.yml
cmake/: CPackLinux.cmake  FindZLIB.cmake
doc/: RELEASE.md  screenshot.json
icons/Tango/: index.theme
include/: bootentry.h  bootentry.h.j2  bootentrydelegate.h  bootentryform.h  bootentrylistmodel.h  bootentrylistview.h  bootentrywidget.h  commands.h  compat.h  devicepathdelegate.h  devicepathdialog.h  devicepathlistview.h  devicepathproxylistmodel.h  devicepathproxymodel.h  devicepathview.h  disableundoredo.h  driveinfo.h  efiboot.h  efiboot.h.j2  efibootdata.h  efibooteditor.h  efibooteditorcli.h  efikeysequence.h  efikeysequenceedit.h  filepathdelegate.h  filepathdialog.h  filepathdialog.h.j2  hotkey.h  hotkeydelegate.h  hotkeylistmodel.h  hotkeysdialog.h  hotkeysview.h  main.h  qindicatorwidget.h  qlabelwrapped.h  qresizabletabwidget.h  qwidgetitemdelegate.h
include/efivar-lite/: device-paths.h  device-paths.h.j2  device-paths.yml  efiboot-loadopt.h  efivar-dp.h  efivar-lite.h  efivar.h  key-option.h  load-option.h
misc/: .gitignore  EFIBootEditor.desktop  EFIBootEditor.icns  EFIBootEditor.metainfo.xml  WIX.template.in  efibooteditor.spec  org.x.efibooteditor.policy  run-efibooteditor
misc/codegen/: gen_efidp.py  pyproject.toml  requirements.txt  spec_parse.py
misc/qt-updater/: main.py  pyproject.toml  requirements.txt
src/: bootentry.cpp  bootentry.cpp.j2  bootentrydelegate.cpp  bootentryform.cpp  bootentrylistmodel.cpp  bootentrylistview.cpp  bootentrywidget.cpp  commands.cpp  devicepathdelegate.cpp  devicepathdialog.cpp  devicepathlistview.cpp  devicepathproxylistmodel.cpp  devicepathproxymodel.cpp  devicepathview.cpp  driveinfo.cpp  driveinfo.darwin.cpp  driveinfo.linux.cpp  driveinfo.win32.cpp  efibootdata.cpp  efibooteditor.cpp  efibooteditorcli.cpp  efikeysequence.cpp  efikeysequenceedit.cpp  efivar-lite.c  efivar-lite.common.h  efivar-lite.darwin.c  efivar-lite.linux.c  efivar-lite.unix.c  efivar-lite.win32.c  filepathdelegate.cpp  filepathdialog.cpp  filepathdialog.cpp.j2  hotkey.cpp  hotkeydelegate.cpp  hotkeylistmodel.cpp  hotkeysdialog.cpp  hotkeysview.cpp  main.cpp
src/form/: bootentryform.ui  bootentrywidget.ui  devicepathdialog.ui  efibooteditor.ui  filepathdialog.ui  filepathdialog.ui.j2  hotkeysdialog.ui
src/include/: bootentry.h  bootentryform.h  bootentrywidget.h  compat.h  devicepathdelegate.h  devicepathlistview.h  efiboot.h  efibooteditor.h  qcompat.h  qwidgetitemdelegate.h
src/include/efivar-lite/: efiboot-loadopt.h  efivar-dp.h
tests/: CMakeLists.txt  testefibootdata.cpp  testefibooteditor.cpp
translations/: efibooteditor_ar.ts  efibooteditor_cs.ts  efibooteditor_de.ts  efibooteditor_en.ts  efibooteditor_es.ts  efibooteditor_fi.ts  efibooteditor_fr.ts  efibooteditor_hu.ts  efibooteditor_it.ts  efibooteditor_ja.ts  efibooteditor_ko.ts  efibooteditor_nb_NO.ts  efibooteditor_pl.ts  efibooteditor_pt.ts  efibooteditor_pt_BR.ts  efibooteditor_ru.ts  efibooteditor_sk.ts  efibooteditor_sl.ts  efibooteditor_sv.ts  efibooteditor_ta.ts  efibooteditor_tr.ts  efibooteditor_uk.ts  efibooteditor_vi.ts  efibooteditor_zh_Hans.ts  efibooteditor_zh_Hant.ts
